# Fastapi_development

./: README.md  SOLID.ipynb  pyproject.toml  requirements.txt
kafka/: consumer.ipynb  producer.ipynb
src/: main.py
src/artifacts/: patients.json
src/model/: pydantic.ipynb
src/notebook/: request.ipynb
src/schema/: patients.py  pydantic.ipynb
src/trail/: trail.ipynb  trail.py
src/utils/: utils.py
