[project]
name = "fastapi-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "requests>=2.32.5",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
]
