[project]
name = "fastapi-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "app-config>=2.0.3",
    "config>=0.5.1",
    "confluent-kafka>=2.12.2",
    "fastapi>=0.121.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "kafka-python>=2.2.15",
    "pydantic[email]>=2.12.3",
    "requests>=2.32.5",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
]
